I dont remember changes

--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -2,7 +2,7 @@ el:
   title: "Πτυχιακή εργασία"
   home: "Αρχική Σελίδα"
   welcome_message: "Καλωσήρθατε στην Πτυχιακή εργασία μου"
-  copyright: "Πτυχιακή εργασία Βασίλειος Καβάσης 2014-2015"
+  copyright: "Πτυχιακή εργασία Βασίλειος Καβάσης 2015"
   contact: "Επικοινωνία"
   contact_details: "Επικοινωνήστε μαζί μου στο email basiliskavasis@gmail.com"
   dissertation: "Πτυχιακή Εργασία"
