--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,7 +2,7 @@ en:
   title: "Dissertation"
   home: "Home Page"
   welcome_message: "Welcome to my Dissertation"
-  copyright: "Dissertation Vasileios Kavasis 2014-2015"
+  copyright: "Dissertation Vasileios Kavasis 2015"
   contact: "Contact"
   contact_details: "Contact me by email basiliskavasis@gmail.com"
   dissertation: "Dissertation"
