Change contact details

--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -4,7 +4,7 @@ el:
   welcome_message: "Καλωσήρθατε στην Πτυχιακή εργασία μου"
   copyright: "Πτυχιακή εργασία Βασίλειος Καβάσης 2015-2016"
   contact: "Επικοινωνία"
-  contact_details: "Επικοινωνήστε μαζί μου στο email basiliskavasis@gmail.com"
+  contact_details: "Επικοινωνήστε μαζί μου στο email: basiliskavasis@gmail.com"
   dissertation: "ΠΤΥΧΙΑΚΗ ΕΡΓΑΣΙΑ"
   sign_out: "Αποσύνδεση"
   edit_profile: "Επεξεργασία Λογαριασμού"
