--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,7 +4,7 @@ en:
   welcome_message: "Welcome to my Dissertation"
   copyright: "Dissertation Vasileios Kavasis 2015-2016"
   contact: "Contact"
-  contact_details: "Contact me by email basiliskavasis@gmail.com"
+  contact_details: "Contact me by email: basiliskavasis@gmail.com"
   dissertation: "Dissertation"
   sign_out: "Sign out"
   edit_profile: "Edit profile"
