Create tables for showing all files

--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -42,6 +42,7 @@ el:
   upload_file: "Ανέβασμα Αρχείου"
   upload_notice: "Το αρχείο ανέβηκε επιτυχώς"
   delete_notice: "Το αρχείο διαγράφτηκε"
+  empty_from_admin: "Ο Χρήστης δεν έχει Αρχεία ή Φακέλους"
   activerecord:
     models:
       archive: "Αρχείο"
