--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,3 +42,4 @@ en:
   upload_file: "Upload File"
   upload_notice: "The file has been uploaded."
   delete_notice: "The file has been deleted."
+  empty_from_admin: "User has no Folders or Files"
