--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,11 +1,11 @@
 en:
   title: "Dissertation"
   home: "Home Page"
-  welcome_message: "Welcome to my Dissertation"
+  welcome_message: "Manage your Files"
   copyright: "Dissertation Vasileios Kavasis 2015-2016"
   contact: "Contact"
   contact_details: "Contact me by email: basiliskavasis@gmail.com"
-  dissertation: "Dissertation"
+  home_page: "Home Page"
   sign_out: "Sign out"
   edit_profile: "Edit profile"
   sign_in: "Sign in"
@@ -29,12 +29,11 @@ en:
   leave_blank_password: "(leave blank if you don't want to change it)"
   confirm_current_password: "(we need your current password to confirm your changes)"
   resend_confirmation_instructions: "Resend Confirmation Instructions"
-  cancel_account: "Cancel my account"
+  cancel_account: "Delete my account"
   forgot_password: "Forgot your password?"
   confiramtion_instructions: "Didn't receive confirmation instructions?"
   unlock_instructions: "Didn't receive unlock instructions?"
   resend_unlock_instructions: "Resend unlock instructions"
-  new_password: "Forgot your password?"
   reset_password: "Send me reset password instructions"
   change_password: "Change your password"
   remember_me: "Remember me"
@@ -43,3 +42,6 @@ en:
   upload_notice: "The file has been uploaded."
   delete_notice: "The file has been deleted."
   empty_from_admin: "User has no Folders or Files"
+  new_password: "New Password"
+  confirm_new_password: "Confirm New Password"
+  waiting_confirmation: "Currently waiting confirmation for:"
