--- a/config/locales/devise.el.yml
+++ b/config/locales/devise.el.yml
@@ -1,7 +1,7 @@
 el:
   devise:
     confirmations:
-      confirmed: "Ο λογαριασμός σας επιβεβαιώθηκε με επιτυχία. Είστε συνδεδεμένος/η."
+      confirmed: "Ο λογαριασμός σας επιβεβαιώθηκε με επιτυχία"
       send_instructions: "Σε λίγα λεπτά θα λάβετε οδηγίες για το πώς θα επιβεβαιώσετε το email σας."
       send_paranoid_instructions: "Αν το email σας υπάρχει στη βάση δεδομένων μας, θα λάβετε email με οδηγίες για την επιβεβαίωση του λογαριασμού σας."
     failure:
@@ -29,7 +29,7 @@ el:
       no_token: "Δεν έχετε πρόσβαση σε αυτή την σελίδα εαν δεν ηρθατε μέσω email επαναφοράς κωδικού. Εαν ηρθατε μέσω email επαναφοράς κωδικού, παρακαλούμε να σιγουρευτείτε οτι χρησιμοποιήσατε τον πλήρη σύνδεσμο (URL) που σας δόθηκε."
       send_instructions: "Θα σας αποσταλεί σε λίγα λεπτά, ένα email με οδηγίες για το πώς να επαναφέρετε τον κωδικό σας."
       send_paranoid_instructions: "Αν το email σας υπάρχει στη βάση δεδομένων μας, θα λάβετε οδηγίες επαναφοράς του κωδικού σας, μέσω email."
-      updated: "Ο κωδικός σας άλλαξε με επιτυχία. Μπορείτε να συνδεθείτε."
+      updated: "Ο κωδικός σας άλλαξε με επιτυχία. Είστε πλέον συνδεδεμένος."
       updated_not_active: "Ο κωδικός σας άλλαξε με επιτυχία."
     registrations:
       destroyed: "Ο λογαριασμός σας διαγράφηκε με επιτυχία."
