When Upload docx files, convert to archive

--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -21,6 +21,7 @@ el:
   users: "Χρήστες"
   index: "Κατάλογος"
   empty: "Δεν έχετε Αρχεία ή Φακέλους"
+  empty_folder: "Κενός Φάκελος"
   new_archive: "Δημιουργία Αρχείου"
   new_folder: "Δημιουργία Φακέλου"
   edit_archive: "Επεξεργασία Αρχείου"
