--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -76,8 +76,10 @@ el:
       models:
         archive:
           blank: "δεν μπορεί να είναι κενό"
+          taken: "χρησιμοποιείται ήδη"
         folder:
           blank: "δεν μπορεί να είναι κενό"
+          taken: "χρησιμοποιείται ήδη"
         user:
           blank: "δεν μπορεί να είναι κενό"
           taken: "χρησιμοποιείται ήδη"
